<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zybooks.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_lifts"
        android:name="com.zybooks.myapplication.ui.lifts.LiftsFragment"
        android:label="@string/title_lifts"
        tools:layout="@layout/fragment_lifts" />

    <fragment
        android:id="@+id/navigation_weight"
        android:name="com.zybooks.myapplication.ui.weight.WeightFragment"
        android:label="@string/title_weight"
        tools:layout="@layout/fragment_weight" />

</navigation>