<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="55sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
    </TextView>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"/>

    <TextView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="45sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress"
        android:layout_marginTop="125dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/light_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/recent_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_recent_weight"
            android:textSize="30sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/light_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_weight"/>

        <TextView
            android:id="@+id/latest_lift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/latest_lift_increased"
            android:textSize="30sp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/light_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latest_lift"/>

        <TextView
            android:id="@+id/progress_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/progress_to_goal_weight"
            android:textSize="30sp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/light_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_weight"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>